Alignment fixes

--- a/cue_social/src/component_styles/cardeditor.css
+++ b/cue_social/src/component_styles/cardeditor.css
@@ -187,7 +187,7 @@
     top: 87.5%;
     /* left: 2%; */
     width: 100%;
-    height: 9%;
+    height: 10.2%;
     /* position: relative; */
     /* clear: both; */
     position: absolute;
@@ -201,15 +201,18 @@
     width: 91%;
     font-size: 3vw;
     /* text-align: center; */
-    vertical-align: middle;
+    /* vertical-align: middle; */
     font-family: 'Cabin', sans-serif;
     font-weight: 400; /* Regular */
     color: #323232;
     /* position: absolute; */
     /* position: relative; */
     /* height: 10%; */
+    /* display: flex; */
     display: flex;
-    align-items: center;
+    /* align-items: center; */
+    /* white-space: pre-wrap; */
+    /* vertical-align: middle; */
   }
 
   #card-code {
